--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
   --primary: #d91b42;
   --secondary: #45c496;
@@ -46,6 +51,210 @@
 
 *::after {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-family: var(--font-hind);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-raleway);
+  line-height: 100%;
+}
+
+p {
+  font-family: var(--font-inter);
+}
+
+button,
+span {
+  font-family: var(--font-hind);
+}
+
+h1,
+h2 {
+  letter-spacing: -4%;
+}
+
+h3,
+h4,
+h5,
+h6 {
+  letter-spacing: -2%;
+}
+
+.display {
+  font-size: 4rem;
+}
+
+h1 {
+  font-size: 2.956rem;
+}
+
+h2 {
+  font-size: 2.813rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.35rem;
+}
+
+h5 {
+  font-size: 1.125rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+caption {
+  font-family: var(--font-inter);
+}
+
+.custom-scroll-bar {
+  --scroll-bar-color: #8ba3e9;
+  --scroll-bar-color-sub: var(--background);
+  --scroll-bar-shadow: 0 0 2px 2px black;
+  --scroll-bar-width: 10px;
+  --scroll-bar-width-min: 8px;
+  --scroll-thumb-width: 8px;
+  --scroll-thumb-width-min: 6px;
+  --scroll-bar-padding: 5px;
+  --scroll-bar-margin: 5px;
+  --scroll-bar-radius: 4px;
+  --sb-track-color: var(--background);
+  --sb-thumb-color: #8ba3e9;
+  --sb-size: 4px;
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  padding-bottom: 10px;
+}
+
+.custom-scroll-bar.thin {
+  scrollbar-width: 0;
+}
+
+.custom-scroll-bar.thin::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.custom-scroll-bar::-webkit-scrollbar {
+  width: var(--sb-size);
+  height: var(--sb-size);
+}
+
+.custom-scroll-bar.main::-webkit-scrollbar {
+  background-color: var(--m-white);
+}
+
+.custom-scroll-bar::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 0;
+  border-radius: var(--sb-size);
+}
+
+.custom-scroll-bar::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
+}
+
+.custom-scroll-bar.main::-webkit-scrollbar-thumb {
+  background: var(--scroll-bar-color);
+}
+
+button:hover {
+  opacity: 0.7;
+}
+
+.preloader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.otp .otpbox {
+  gap: 0.55rem !important;
+  text-align: center !important;
+  justify-content: center !important;
+  margin: auto !important;
+}
+
+.otp input {
+  width: 4.125rem !important;
+  height: 4.125rem !important;
+  border-radius: 0.9rem !important;
+  border: 0.1rem solid #b2b2b2;
+  color: #000 !important;
+  background-color: #f5f5f5 !important;
+  user-select: none !important;
+}
+
+.otp input:focus {
+  outline: none !important;
+  border: 0.15rem solid #f85009 !important;
+  user-select: none !important;
+}
+
+.pin .otpbox {
+  gap: 0.55rem !important;
+  text-align: center !important;
+  justify-content: center !important;
+  margin: auto !important;
+}
+
+.pin input {
+  width: 3rem !important;
+  height: 3rem !important;
+  border-radius: 0.9rem !important;
+  border: 0.1rem solid #b2b2b2;
+  color: #fff !important;
+  background-color: transparent !important;
+  user-select: none !important;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+.roundeltr {
+  border-top-right-radius: 0.75px;
+  border-bottom-right-radius: 0.75px;
+}
+
+.roundertl {
+  border-top-left-radius: 0.75px;
+  border-bottom-left-radius: 0.75px;
 }
 
 html,
@@ -167,69 +376,6 @@ html.dark .features {
   background-color: #1d1b1b !important;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.justify-end {
-  justify-content: end;
-}
-
-.gap-1 {
-  gap: 5px;
-}
-
-.gap-2 {
-  gap: 10px;
-}
-
-.gap-4 {
-  gap: 20px;
-}
-
-.gap-6 {
-  gap: 40px;
-}
-
-.p-2 {
-  padding: 20px;
-}
-
-.p-4 {
-  padding: 40px;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
-}
 
 .bg-primary {
   background-color: var(--primary);
@@ -263,38 +409,6 @@ html.dark .features {
   color: var(--text-color);
 }
 
-.text-small {
-  font-size: small;
-}
-
-.text-medium {
-  font-size: medium;
-}
-
-.text-large {
-  font-size: 25px;
-}
-
-.text-larger {
-  font-size: 35px;
-}
-
-.font-bold {
-  font-weight: bold;
-}
-
-.relative {
-  position: relative;
-}
-
-.absolute {
-  position: absolute;
-}
-
-.fixed {
-  position: fixed;
-}
-
 .w-280 {
   width: 280px;
 }
@@ -303,24 +417,12 @@ html.dark .features {
   font-size: 40px;
 }
 
-.text-center {
-  text-align: center;
-}
-
 .w-400 {
   width: 400px;
 }
 
 .w-600 {
   width: 600px;
-}
-
-.h-svh {
-  height: 100svh;
-}
-
-.min-h-svh {
-  height: 100svh;
 }
 
 @media (max-width: 720px) {
