--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --primary: #d91b42;
   --secondary: #45c496;
@@ -66,6 +65,7 @@ h5,
 h6 {
   font-family: var(--font-raleway);
   line-height: 100%;
+  font-weight: 500;
 }
 
 p {
@@ -94,11 +94,11 @@ h6 {
 }
 
 h1 {
-  font-size: 2.956rem;
+  font-size: 2.756rem;
 }
 
 h2 {
-  font-size: 2.813rem;
+  font-size: 2.413rem;
 }
 
 h3 {
@@ -235,14 +235,14 @@ button:hover {
   user-select: none !important;
 }
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
 /* For Firefox */
-input[type='number'] {
+input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
@@ -375,7 +375,6 @@ html.dark .answer {
 html.dark .features {
   background-color: #1d1b1b !important;
 }
-
 
 .bg-primary {
   background-color: var(--primary);
